cholera 0.7.9.9093
==================

- add detailed subtitle in latlongWalkingPath().


cholera 0.7.9.9092
==================

- add/use S3 version of latlongWalkingPath().
- set alpha.f = 1 in drawPathB().


cholera 0.7.9.9091
==================

- rename neighborhoodVoronoiB() to latlongNeighborhoodVoronoi().


cholera 0.7.9.9090
==================

- promote latlongVoronoiC() to latlongVoronoi().


cholera 0.7.9.9089
==================

- add/use latlong.nearest.pump and latlong.nearest.pump.vestry.


cholera 0.7.9.9088
==================

- fix milePosts() for latlongWalkingPath().


cholera 0.7.9.9087
==================

- allow all case numbers in latlongWalkingPath().


cholera 0.7.9.9086
==================

- promote latlongWalkingPathB() to latlongWalkingPath(); add milePosts().


cholera 0.7.9.9085
==================

- add mile posts to latlongWalkingPathB().


cholera 0.7.9.9084
==================

- add orthoProjFatalities() and orthoProjector() to document ortho.proj.


cholera 0.7.9.9083
==================

- add latlongWalkingPathB() prototype.


cholera 0.7.9.9082
==================

- add latlongEmbedB() prototype.
- add latlongNeighborhoodDataB() prototype.
- add latlongNearestPumpB() and latlong_pathDataB() prototypes.


cholera 0.7.9.9081
==================

- add latlongOrthoAddressB() prototype.


cholera 0.7.9.9080
==================

- amend meterLatitude() and meterLatLong(); move to latlongAuxilliaryFunctions.R.


cholera 0.7.9.9079
==================

- add latlongOrthoPumpB() prototype.
- translate coordinates back to longitude and latitude in latlongOrthoPumpB().


cholera 0.7.9.9078
==================

- add geodesicMeters().
- use geodesicMeters() in latlongVoronoiC().


cholera 0.7.9.9077
==================

- add addWalkingPathB() and latlong.nearest.pump diagnostic tools.


cholera 0.7.9.9076
==================

- edit note on Voronoi diagrams with latlong data.
- document solution in appendix.


cholera 0.7.9.9075