@@ -25,6 +25,7 @@ S3method(print,classifier_audit)
 S3method(print,euclidean)
 S3method(print,euclidean_path)
 S3method(print,iso)
+S3method(print,latlong_walking_path)
 S3method(print,time_series)
 S3method(print,voronoi)
 S3method(print,walking)
